PIRATE-4207, fix "More" and "Less" posts list link not visible

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -348,7 +348,8 @@ footer.bk-footerp {
 .ecom-product-go-to-checkout-btn,
 .ecom-product-add-to-cart-btn,
 .ecombasket-pull,
-.basket-summary-submit {
+.basket-summary-submit,
+.blog-list-footer a {
   margin: 0.5em 0em;
   padding: 8px 14px;
   border: 1px solid @color-swatch1;
@@ -364,7 +365,8 @@ footer.bk-footerp {
   text-shadow: 0px 1px 1px rgba(0,0,0,0.1);
 }
 
-.widget.button button:hover
+.widget.button button:hover,
+.blog-list-footer a:hover
 {
   background-color: @font-swatch7-background-color-hover;
   cursor: pointer;
@@ -1695,16 +1697,6 @@ footer.bk-footer .widget.socialicons span a, footer.bk-footer .widget.profile .b
 
 .blog-list-footer {
     margin: 10px 0 30px;
-    a {
-        padding: 6px 10px;
-        color: @color-swatch1;
-        box-shadow: none;
-        &:hover {
-            background-color: darken(@color-swatch5, 5%);
-            border-color: @color-swatch3;
-            color: @color-swatch4;
-        }
-    }
 }
 
 // Blog Post
